# NEXT-MOBILITY-2024-limo_ros1_autonomous_driving_mission

./: .gitignore  README.md
limo_autonomous_controller/: ARCHITECTURE.md  CMakeLists.txt  QUICKSTART.md  package.xml
limo_autonomous_controller/config/: controller_params.yaml
limo_autonomous_controller/launch/: autonomous_drive.launch
limo_autonomous_controller/scripts/: check_topics.sh  combined_controller.py  install.sh  test_v2x.py
